# swgl

./: .gitmodules  Cargo.toml  README.md
src/: lib.rs
src/camera2d/: fixed_size_camera.rs  interface.rs  mod.rs  ratio_view.rs
src/gl_wrapper/: mod.rs
src/gl_wrapper/basics/: mod.rs
src/gl_wrapper/element_buffer_object/: mod.rs
src/gl_wrapper/shader/: mod.rs
src/gl_wrapper/texture/: mod.rs  texture_2d.rs  texture_config.rs
src/gl_wrapper/vertex_array_object/: mod.rs
src/gl_wrapper/vertex_buffer_object/: mod.rs
src/global_tools/: index_converters.rs  mod.rs  vector2.rs
src/global_tools/helpers/: mod.rs  random_numbers.rs
src/graphics_2d/: color.rs  ebo_generators.rs  geometry_object.rs  mod.rs  shader_collections.rs  texture_atlas.rs
src/graphics_2d/renderer/: geometry_renderer.rs  helpers.rs  mod.rs  rectangle_renderer.rs  renderer_conf.rs
src/graphics_2d/vertex_2d/: interface.rs  mod.rs
src/graphics_2d/vertex_2d/predefined/: color_vertex2d.rs  mod.rs  single_tex_vertex2d.rs  vertex2d.rs
src/io_web_tools/: keyboard_box.rs  mod.rs
src/resources_loader/: mod.rs
src/runtime_error/: mod.rs
src/utils/: image_future.rs  mod.rs  web_helpers.rs
