[package]
name = "swgl"
version = "0.1.0"
authors = ["Jakub Padlo <jakubpadlo4@gmail.com>"]
edition = "2018"
license = "Beerware"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
random-number = "0.1.3"
getrandom = { version = "*", features = ["wasm-bindgen"] }
nalgebra-glm = "0.9.0"
js-sys = "0.3.46"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.19"
num-traits = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  # fetch
  'ResponseType',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',

  # events
  'KeyboardEvent',
  'FocusEvent',

  # dom
  'Window',
  'Document',
  'Element',
  'HtmlImageElement',
  'HtmlCanvasElement',

  # webgl
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlBuffer',
  'WebGlUniformLocation',
  'WebGl2RenderingContext',
  'WebGlTexture',
  'WebGlVertexArrayObject',
]
